Fixed bug with dictionary validation (#263)